@@ -15,6 +15,6 @@ public interface IRVisitor<S,E> {
     public E visit(Addr s);
     public E visit(Mem s);
     public E visit(Var s);
-    public E visit(IntValue s);
-    public E visit(StringValue s);
+    public E visit(Int s);
+    public E visit(Str s);
 }
