@@ -1,3 +1,15 @@
+Wed May  6 14:19:12 2009  Minero Aoki  <aamine@loveruby.net>
+
+	* net/loveruby/cflat/ir/StringValue.java -> Str.java
+
+	* net/loveruby/cflat/ir/IntValue.java -> Int.java
+
+	* net/loveruby/cflat/ir/IRVisitor.java: ditto.
+
+	* net/loveruby/cflat/compiler/IRGenerator.java: ditto.
+
+	* net/loveruby/cflat/compiler/CodeGenerator.java: ditto.
+
 Mon May  4 19:00:33 2009  Minero Aoki  <aamine@loveruby.net>
 
 	* net/loveruby/cflat/compiler/LocalResolver.java: create
